[package]
name = "svdp"
version = "0.1.0"
edition = "2024"
description = "Admin tools for the St Vincent de Paul society at Nativity Catholic Church in Menlo Park, CA."

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
const_format = "0.2.35"
csv = "1.4.0"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["cookies", "form", "json"] }
rpassword = "7.4.0"
scraper = "0.25.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
